backend/api/tests/integration/jig/snapshots/integration__jig__draft__publish_draft-2.snap
---
source: tests/integration/jig/draft.rs
expression: body

---
{
  "jig": {
    "id": "[id]",
    "display_name": "",
    "play_count": 0,
    "modules": [],
    "age_ranges": [],
    "affiliations": [],
    "goals": [],
    "creator_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "author_id": "1f241e1b-b537-493f-a230-075cb16315be",
    "language": "en",
    "categories": [],
    "publish_at": null,
    "additional_resources": [],
    "description": "updated draft description",
    "last_edited": "[time_stamp]",
    "is_public": true,
    "default_player_settings": {
      "direction": "ltr",
      "display_score": false,
      "track_assessments": false,
      "drag_assist": false
    },
    "theme": "Blank",
    "audio_background": null,
    "audio_effects": {
      "feedback_positive": [],
      "feedback_negative": []
    }
  }
}
